force-app/main/default/objects/Order/fields/FIN_AdjustmentTotal__c.field-meta.xml
<CustomField>
    <fullName>FIN_AdjustmentTotal__c</fullName>
    <description>Formula (fields TBD)</description>
    <formula>&apos;test&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Total</label>
    <type>Text</type>
</CustomField>