force-app/main/default/objects/Order/fields/FIN_Approver__c.field-meta.xml
<CustomField>
    <fullName>FIN_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>