force-app/main/default/objects/Order/fields/FIN_Base_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FIN_Base_Quantity__c</fullName>
    <label>Base Quantity</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Fin_InventoryType__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Fin_InventoryType__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>