force-app/main/default/objects/Order/fields/FIN_BaseComp_Total_NoTax__c.field-meta.xml
<CustomField>
    <fullName>FIN_BaseComp_Total_NoTax__c</fullName>
    <label>Base Component Tax Excluded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>