force-app/main/default/objects/Order/fields/FIN_BaseCompGrandTotal__c.field-meta.xml
<CustomField>
    <fullName>FIN_BaseCompGrandTotal__c</fullName>
    <label>Base Component Tax Included</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>