force-app/main/default/objects/Order/fields/FIN_Channel__c.field-meta.xml
<CustomField>
    <fullName>FIN_Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Back Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>