force-app/main/default/objects/Order/fields/FIN_ClientID__c.field-meta.xml
<CustomField>
    <fullName>FIN_ClientID__c</fullName>
    <description>Formula (Account number Lookup)</description>
    <formula>Account.FIN_ClientID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client ID</label>
    <type>Text</type>
</CustomField>