force-app/main/default/objects/Order/fields/FIN_ContextID__c.field-meta.xml
<CustomField>
    <fullName>FIN_ContextID__c</fullName>
    <description>Formula (Context ID field lookup)</description>
    <formula>FIN_OrderContext__r.Context_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Context ID</label>
    <type>Text</type>
</CustomField>