force-app/main/default/objects/Order/fields/FIN_ContractRecordType__c.field-meta.xml
<CustomField>
    <fullName>FIN_ContractRecordType__c</fullName>
    <formula>IF (Contract.RecordType.DeveloperName = &apos;FIN_US_Master_Contract&apos;, &apos;Master&apos;,
					IF(
	     Contract.RecordType.DeveloperName = &apos;FIN_US_Subcontract&apos;, &apos;SubContract&apos;, null
				 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Record Type</label>
    <type>Text</type>
</CustomField>