force-app/main/default/objects/Order/fields/FIN_CurrentUser_is_Owner__c.field-meta.xml
<CustomField>
    <fullName>FIN_CurrentUser_is_Owner__c</fullName>
    <formula>IF(OwnerId = $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentUser is Owner</label>
    <type>Checkbox</type>
</CustomField>