force-app/main/default/objects/Order/fields/FIN_CustAcctNumber__c.field-meta.xml
<CustomField>
    <fullName>FIN_CustAcctNumber__c</fullName>
    <description>Formula (Account number Lookup)</description>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account Number</label>
    <type>Text</type>
</CustomField>