force-app/main/default/objects/Order/fields/FIN_CustomerID__c.field-meta.xml
<CustomField>
    <fullName>FIN_CustomerID__c</fullName>
    <label>Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>