force-app/main/default/objects/Order/fields/FIN_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>FIN_Entity_ID__c</fullName>
    <label>Entity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>