force-app/main/default/objects/Order/fields/FIN_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>FIN_Entity_Name__c</fullName>
    <label>Entity Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>