force-app/main/default/objects/Order/fields/FIN_Event__c.field-meta.xml
<CustomField>
    <fullName>FIN_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>