force-app/main/default/objects/Order/fields/FIN_EventBuildDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventBuildDate__c</fullName>
    <description>Formula (Event build date value)</description>
    <formula>FIN_Event__r.FIN_BuildDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Build Date</label>
    <type>Date</type>
</CustomField>