force-app/main/default/objects/Order/fields/FIN_EventID__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventID__c</fullName>
    <description>Formula (Event ID value)</description>
    <formula>FIN_Event__r.FIN_EventID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event ID</label>
    <type>Text</type>
</CustomField>