force-app/main/default/objects/Order/fields/FIN_EventStartDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventStartDate__c</fullName>
    <description>Formula (Event Start Date value)</description>
    <formula>FIN_Event__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>