force-app/main/default/objects/Order/fields/FIN_EventZoneGlCode__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventZoneGlCode__c</fullName>
    <label>Event Zone Code</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>