force-app/main/default/objects/Order/fields/FIN_Financial_Enriched_Tag__c.field-meta.xml
<CustomField>
    <fullName>FIN_Financial_Enriched_Tag__c</fullName>
    <label>Financial Enriched Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>