force-app/main/default/objects/Order/fields/FIN_FinancialAdjCount__c.field-meta.xml
<CustomField>
    <fullName>FIN_FinancialAdjCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Financial Adjustment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>