force-app/main/default/objects/Order/fields/FIN_Invoice__c.field-meta.xml
<CustomField>
    <fullName>FIN_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>FIN_Invoice__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>