force-app/main/default/objects/Order/fields/FIN_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>FIN_Invoice_Number__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>