force-app/main/default/objects/Order/fields/FIN_MOD__c.field-meta.xml
<CustomField>
    <fullName>FIN_MOD__c</fullName>
    <label>Method of Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AXS Mobile ID - Free (Recommended)</fullName>
            </value>
            <value>
                <fullName>Print Immediately</fullName>
            </value>
            <value>
                <fullName>Will Call - $6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>