force-app/main/default/objects/Order/fields/FIN_Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>FIN_Offer_Type__c</fullName>
    <label>Offer Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>