force-app/main/default/objects/Order/fields/FIN_OfferLookup__c.field-meta.xml
<CustomField>
    <fullName>FIN_OfferLookup__c</fullName>
    <label>Offer Lookup</label>
    <length>50</length>
    <type>Text</type>
</CustomField>