force-app/main/default/objects/Order/fields/FIN_OfferName__c.field-meta.xml
<CustomField>
    <fullName>FIN_OfferName__c</fullName>
    <label>Offer Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>