force-app/main/default/objects/Order/fields/FIN_Operator__c.field-meta.xml
<CustomField>
    <fullName>FIN_Operator__c</fullName>
    <label>Operator</label>
    <length>250</length>
    <type>Text</type>
</CustomField>