force-app/main/default/objects/Order/fields/FIN_Outlet__c.field-meta.xml
<CustomField>
    <fullName>FIN_Outlet__c</fullName>
    <label>Outlet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Back Office</fullName>
            </value>
            <value>
                <fullName>Groups Online</fullName>
            </value>
            <value>
                <fullName>Box Office</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>Canton</fullName>
            </value>
            <value>
                <fullName>Box Office Q Groups</fullName>
            </value>
            <value>
                <fullName>P4_WebOutlet</fullName>
            </value>
            <value>
                <fullName>Facebook API</fullName>
            </value>
            <value>
                <fullName>Veritix Call Center</fullName>
            </value>
            <value>
                <fullName>Canton - Back Office</fullName>
            </value>
            <value>
                <fullName>Back Office Master</fullName>
            </value>
            <value>
                <fullName>AXS Denver - Coliseum - Box Office</fullName>
            </value>
            <value>
                <fullName>AEG Live - Back Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>