force-app/main/default/objects/Order/fields/FIN_Payment__c.field-meta.xml
<CustomField>
    <fullName>FIN_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>FIN_Payment__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>