force-app/main/default/objects/Order/fields/FIN_PriceCode__c.field-meta.xml
<CustomField>
    <fullName>FIN_PriceCode__c</fullName>
    <label>Price Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Day of Show</fullName>
            </value>
            <value>
                <fullName>AXS Premium DP</fullName>
            </value>
            <value>
                <fullName>Add a Table</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Add a Booth</fullName>
            </value>
            <value>
                <fullName>Local Presale</fullName>
            </value>
            <value>
                <fullName>Venue Comp</fullName>
            </value>
            <value>
                <fullName>Presale</fullName>
            </value>
            <value>
                <fullName>Artist Presale</fullName>
            </value>
            <value>
                <fullName>Sold on Tixr</fullName>
            </value>
            <value>
                <fullName>AXS Distro A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>