force-app/main/default/objects/Order/fields/FIN_PriceCodeType__c.field-meta.xml
<CustomField>
    <fullName>FIN_PriceCodeType__c</fullName>
    <label>Price Code Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>AXS Premium</fullName>
            </value>
            <value>
                <fullName>Non-Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>