force-app/main/default/objects/Order/fields/FIN_Reclassify__c.field-meta.xml
<CustomField>
    <fullName>FIN_Reclassify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reclassify</label>
    <type>Checkbox</type>
</CustomField>