force-app/main/default/objects/Order/fields/FIN_Region__c.field-meta.xml
<CustomField>
    <fullName>FIN_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_Region</valueSetName>
    </valueSet>
</CustomField>