force-app/main/default/objects/Order/fields/FIN_Remark__c.field-meta.xml
<CustomField>
    <fullName>FIN_Remark__c</fullName>
    <label>Remark</label>
    <length>250</length>
    <type>Text</type>
</CustomField>