force-app/main/default/objects/Order/fields/FIN_RulesInfo__c.field-meta.xml
<CustomField>
    <fullName>FIN_RulesInfo__c</fullName>
    <label>Rules Info</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>