force-app/main/default/objects/Order/fields/FIN_Sale_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>FIN_Sale_Unique_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Sale Unique ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>