force-app/main/default/objects/Order/fields/FIN_SettlementStatus__c.field-meta.xml
<CustomField>
    <fullName>FIN_SettlementStatus__c</fullName>
    <formula>TEXT(FIN_Invoice__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Status</label>
    <type>Text</type>
</CustomField>