force-app/main/default/objects/Order/fields/FIN_SystemDataLoadLog__c.field-meta.xml
<CustomField>
    <fullName>FIN_SystemDataLoadLog__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>System Data Load Log</label>
    <referenceTo>FIN_SystemDataLoadLog__c</referenceTo>
    <relationshipLabel>Sales</relationshipLabel>
    <relationshipName>Sales</relationshipName>
    <type>Lookup</type>
</CustomField>