force-app/main/default/objects/Order/fields/FIN_ToBeInvoiced__c.field-meta.xml
<CustomField>
    <fullName>FIN_ToBeInvoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To be invoiced</label>
    <type>Checkbox</type>
</CustomField>