force-app/main/default/objects/Order/fields/FIN_ToBeJournalized__c.field-meta.xml
<CustomField>
    <fullName>FIN_ToBeJournalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To be journalized</label>
    <type>Checkbox</type>
</CustomField>