force-app/main/default/objects/Order/fields/FIN_ToBeSettled__c.field-meta.xml
<CustomField>
    <fullName>FIN_ToBeSettled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To be settled</label>
    <type>Checkbox</type>
</CustomField>