force-app/main/default/objects/Order/fields/FIN_Total_Payment_Distribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>FIN_Total_Payment_Distribution_Amount__c</fullName>
    <label>Total Payment Distribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>