force-app/main/default/objects/Order/fields/FIN_total_sales_amount__c.field-meta.xml
<CustomField>
    <fullName>FIN_total_sales_amount__c</fullName>
    <label>Total Sales amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>