force-app/main/default/objects/Order/fields/FIN_Total_Sales_Gross_Amoun__c.field-meta.xml
<CustomField>
    <fullName>FIN_Total_Sales_Gross_Amoun__c</fullName>
    <label>Total Sales Gross Amount</label>
    <summarizedField>OrderItem.FIN_TotalGrossAmount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>