force-app/main/default/objects/Order/fields/FIN_Total_Sales_Qty__c.field-meta.xml
<CustomField>
    <fullName>FIN_Total_Sales_Qty__c</fullName>
    <label>Total Sales Qty</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>