force-app/main/default/objects/Order/fields/FIN_total_sales_tax_amount__c.field-meta.xml
<CustomField>
    <fullName>FIN_total_sales_tax_amount__c</fullName>
    <label>Total Sales Tax Amount</label>
    <summarizedField>OrderItem.FIN_TotalTaxAmount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>