force-app/main/default/objects/Order/fields/FIN_Total_Ticket_Sales_Count__c.field-meta.xml
<CustomField>
    <fullName>FIN_Total_Ticket_Sales_Count__c</fullName>
    <label>Total Ticket Sales Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>