force-app/main/default/objects/Order/fields/FIN_TotalSaleNetAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalSaleNetAmount__c</fullName>
    <label>Total Sale Net Amount</label>
    <summarizedField>OrderItem.FIN_TotalNetAmount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>