force-app/main/default/objects/Order/fields/FIN_TotalTickets__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalTickets__c</fullName>
    <description>Total Ticket Sales Count for Settlement Report</description>
    <formula>IF(TEXT(Settlement_Status__c) = &apos;Settled&apos;,
0,
FIN_Total_Ticket_Sales_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>