force-app/main/default/objects/Order/fields/FIN_TotalWithAdjustment__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalWithAdjustment__c</fullName>
    <description>Formula (fields tbd)</description>
    <formula>&apos;test&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total with Adjustment</label>
    <type>Text</type>
</CustomField>