force-app/main/default/objects/Order/fields/FIN_Transactions_wo_Library_Association__c.field-meta.xml
<CustomField>
    <fullName>FIN_Transactions_wo_Library_Association__c</fullName>
    <label>Transactions without Library Association</label>
    <summaryFilterItems>
        <field>OrderItem.FIN_Missing_Library_Association__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>