force-app/main/default/objects/Order/fields/FIN_Unclassified_US__c.field-meta.xml
<CustomField>
    <fullName>FIN_Unclassified_US__c</fullName>
    <formula>IF (TEXT(FIN_Region__c) = &apos;US&apos; &amp;&amp; (
				     FIN_ContractRecordType__c = &apos;Master&apos; 
				    ||  TEXT(ApprovalStatus__c) != &apos;Approved&apos; 
				    ||  Contract.Name = null 
				    || Contract.Name = &apos;UNCLASSIFIED&apos;
) , true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>US Unclassified?</label>
    <type>Checkbox</type>
</CustomField>