force-app/main/default/objects/Order/fields/FIN_VariantSKU__c.field-meta.xml
<CustomField>
    <fullName>FIN_VariantSKU__c</fullName>
    <label>Variant SKU</label>
    <length>14</length>
    <type>Text</type>
</CustomField>