force-app/main/default/objects/Order/fields/FIN_VenueAddress__c.field-meta.xml
<CustomField>
    <fullName>FIN_VenueAddress__c</fullName>
    <formula>FIN_Venue__r.ShippingStreet + BR() +
 FIN_Venue__r.ShippingCity + &quot;, &quot;+
 FIN_Venue__r.ShippingState + &quot; &quot; +
 FIN_Venue__r.ShippingPostalCode + BR() +
 FIN_Venue__r.ShippingCountry</formula>
    <label>Venue Address</label>
    <type>Text</type>
</CustomField>