force-app/main/default/objects/Order/fields/FIN_VenueName__c.field-meta.xml
<CustomField>
    <fullName>FIN_VenueName__c</fullName>
    <formula>FIN_Venue__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue Name</label>
    <type>Text</type>
</CustomField>