force-app/main/default/objects/Order/fields/FIN_ZoneDesc__c.field-meta.xml
<CustomField>
    <fullName>FIN_ZoneDesc__c</fullName>
    <label>Zone Desc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>Table / Booth Upsell</fullName>
            </value>
            <value>
                <fullName>Comps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>