force-app/main/default/objects/Order/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <formula>OR(
ISPICKVAL(Status, &quot;Posted&quot;),
ISPICKVAL(Status, &quot;Settled&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>